--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.6.7",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "mocha": "^6.2.0",
