--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "big.js": "^5.2.2",
     "body-parser": "^1.19.0",
+    "connect-mongodb-session": "^2.2.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "lodash": "^4.17.15",
     "mongoose": "^5.6.7",
     "morgan": "^1.9.1",
