--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "big.js": "^5.2.2",
     "body-parser": "^1.19.0",
     "connect-mongodb-session": "^2.2.0",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "got": "^9.6.0",
     "lodash": "^4.17.15",
-    "mongoose": "^5.6.7",
-    "morgan": "^1.9.1",
-    "node-fetch": "^2.6.0"
+    "mongoose": "^5.6.9",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "mocha": "^6.2.0",
