--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "got": "^9.6.0",
+    "helmet": "^3.20.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.6.9",
     "morgan": "^1.9.1"
